<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >


        <TableRow>
			<Button 
			    android:id="@+id/back_button"
			    android:text="@string/back_button"
			    android:onClick="goBack"
			    android:padding="6sp"
			    android:layout_margin="2sp"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
			<Button 
			    android:id="@+id/next_button"
			    android:text="@string/next_button"
			    android:onClick="goNext"
			    android:padding="6sp"
			    android:layout_margin="2sp"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<Button 
			    android:id="@+id/finish_button"
			    android:text="@string/finish_button"
			    android:onClick="goFinish"
			    android:padding="6sp"
			    android:layout_margin="2sp"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
